--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
         <div class="card card__why-we">
             <h1>03</h1>
-            <h2>Мы не даём пустых надежд и беспочвенный гарантий</h2>
+            <h2>Мы не даём пустых надежд и беспочвенных гарантий</h2>
             <span>ЭНСО ценит свою деловую репутацию и следует многолетним традициям фирмы. От нас вы получите объективную оценку ситуации и прогноз по исходу дела.</span>
         </div>
 
