--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
             <div class="benefit__item">
                 <img src="src/img/icons/Checkbox_icon.png" alt="">
-                <span>Вы полностью избавитесь от своих долгов и начнете новую жизнь
+                <span>Исполнительные производства будут приостановлены, у Вас не будет ограничения в выезде за границу
 
                 </span>
             </div>
 
             <div class="benefit__item">
                 <img src="src/img/icons/Checkbox_icon.png" alt="">
-                <span>Кредиторы и коллекторы больше не будут донимать Вас звонками, так как общение с ними мы полностью берем на себя
+                <span>Вы полностью избавитесь от своих долгов и начнете новую жизнь
                 </span>
             </div>
         </div>
