--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="card card__why-we">
             <h1>04</h1>
             <h2>Мы открыты к диалогу</h2>
-            <span>Наши сотрудники объясняют все этапы процедуры ясным языком, помогая разобраться в происходящем. Мы дадим Вам понятные и полезные ответы на все вопросы.</span>
+            <span>Наши сотрудники объясняют все этапы процедуры простым языком, помогая разобраться в происходящем. Мы дадим Вам понятные и полезные ответы на все вопросы.</span>
         </div>
 
         <div class="card card__why-we">
@@ -185,7 +185,7 @@
             <hr>
             <li>Судебное представительство и защиту Вашего имущества до момента завершения процедуры</li>
         </ul>
-        <i>Стоимость сопровождения процедуры банкротства физического лица: от 10 000 рублей в месяц</i>
+        <i>Стоимость сопровождения процедуры банкротства физического лица: ежемесячно – 10 000 руб., <br>единоразово – 150 000 руб. </i>
     </div>
 </div>
     </section>
