--- a/index.html
+++ b/index.html
@@ -133,9 +133,6 @@
         </div>
 
     <div class="card-container why-we">
-
-        
-
         <div class="card card__why-we">
             <h1>01</h1>
             <h2>Юридическая компания ЭНСО – надёжный помощник на пути освобождения от цепей долгов</h2>
@@ -185,7 +182,9 @@
             <hr>
             <li>Судебное представительство и защиту Вашего имущества до момента завершения процедуры</li>
         </ul>
-        <i>Стоимость сопровождения процедуры банкротства физического лица: ежемесячно – 10 000 руб., <br>единоразово – 150 000 руб. </i>
+        <div class="card card__why-we">
+            <h2>Стоимость сопровождения процедуры банкротства физического лица: <br> ежемесячно – 10 000 руб., <br>единоразово – 150 000 руб. </h1>
+        </div>
     </div>
 </div>
     </section>
